Fix overflow-y issue on Safari and FF

--- a/src/components/Container/styles.scss
+++ b/src/components/Container/styles.scss
@@ -1,5 +1,7 @@
 .main-container {
   height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 @media screen and (min-width: 960px) {
@@ -8,6 +10,8 @@
     margin: 0 auto;
     position: relative;
     height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
 }
 
