--- a/src/components/Profile/styles.scss
+++ b/src/components/Profile/styles.scss
@@ -77,4 +77,5 @@
 .start-conversation-button {
   text-align: center;
   padding-top: 30px;
+  display: inline-block;
 }
